# emnlp2025-automatic-error-discovery

./: .gitignore  ABOUT_THIS_TEMPLATE.md  NOTICE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
arxiv2025_automatic_error_discovery/: __main__.py  cli.py
docs/: index.md
scripts/: error_definition_generation.sh  knn_contrastive.sh  llm_finetuning.sh  loop.sh  seeed.sh  syncid.sh
src/: abs_manager.py  arguments.py  dataset.py  error_definition_generation.py  error_definitions.py  knn_contrastive.py  llm_finetuning.py  loop.py  losses.py  models.py  nnk_means.py  seeed.py  syncid.py  utility.py
static/css/: index.css
tests/: test_base.py
