[project]
name = "automated_error_discovery"
version = "0.0.1"
requires-python = ">=3.10.0"
dependencies = [
    "mlflow >= 2.17.2",
    "scikit-learn >= 1.5.2",
    "transformers >= 4.45.0",
    "flash-attn >= 2.7.3",
    "datasets >= 3.1.0",
    "evaluate >= 0.4.3",
    "torch >= 2.5.1",
    "torchvision >= 0.20.1",
    "accelerate >= 1.1.0",
    "bitsandbytes >= 0.44.1",
    "tabulate >= 0.9.0",
    "seaborn >= 0.13.2",
    "umap-learn >= 0.5.7"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]